--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -6,15 +6,34 @@
 
 {% block content %}
 
+    <!-- Back link  -->
+
     <p><a href="{{ page.get_parent.url }}">Return to blog index page</a></p>
+
+    <!-- Page meta  -->
 
     <h1>{{ page.title }}</h1>
 
     <p class="meta">{{ page.date }}</p>
 
+    {% if page.tags.all.count %}
+        <p>
+            <div class="tags">
+                Tags:
+                {% for tag in page.tags.all %}
+                    <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+                {% endfor %}
+            </div>
+        </p>
+    {% endif %}
+
+    <!-- Page text  -->
+
     <div class="intro">{{ page.intro }}</div>
 
     {{ page.body|richtext }}
+
+    <!-- Page images -->
 
     {% for item in page.gallery_images.all %}
         <div style="float: left; margin: 10px;">
