--- a/blog/templates/blog/blog_tag_index_page.html
+++ b/blog/templates/blog/blog_tag_index_page.html
@@ -3,13 +3,18 @@
 
 {% block content %}
 
-    <!-- Back link  -->
+    <!-- Nav links  -->
 
-    <p><a href="{% slugurl 'blog' %}">Return to blog index page</a></p>
+    <p>
+        <a href="{% slugurl 'home' %}">Homepage</a>
+        &nbsp;>&nbsp;
+        <a href="{% slugurl 'blog' %}">Blog</a>
+        &nbsp;>&nbsp;{{ page.title }}
+    </p>
 
     <!-- Tag list -->
 
-    <h1>Tags</h1>
+    <h1>Blog Tags</h1>
 
     {% if request.GET.tag|length %}
         <h3>Showing pages tagged "{{ request.GET.tag }}"</h3>
@@ -20,8 +25,6 @@
         <h3><a href="{% pageurl blogpage %}">{{ blogpage.title }}</a></h3>
         <p>Last updated: {{ blogpage.latest_revision_created_at }}</p>
 
-    {% empty %}
-        No pages found with that tag.
     {% endfor %}
 
 {% endblock %}
