--- a/blog/templates/blog/blog_tag_index_page.html
+++ b/blog/templates/blog/blog_tag_index_page.html
@@ -6,7 +6,7 @@
     <!-- Nav links  -->
 
     <p>
-        <a href="{% slugurl 'home' %}">Homepage</a>
+        <a href="{% slugurl 'home' %}">Home</a>
         &nbsp;>&nbsp;
         <a href="{% slugurl 'blog' %}">Blog</a>
         &nbsp;>&nbsp;{{ page.title }}
