--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -9,7 +9,7 @@
     <!-- Nav links -->
 
     <p>
-        <a href="{% slugurl 'home' %}">Homepage</a>
+        <a href="{% slugurl 'home' %}">Home</a>
         &nbsp;>&nbsp;
         <a href="{{ page.get_parent.url }}">Blog</a>
         &nbsp;>&nbsp;{{ page.title }}
