--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -19,7 +19,8 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/mysite.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
@@ -29,16 +30,19 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        {% block content %}
-            <div class="container">
-                <div class="row">
-
+        <!-- Main content -->
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-9 bg-light p-5 my-5 border">
+                    {% block content %}
+                    {% endblock content %}
                 </div>
             </div>
-        {% endblock %}
+        </div>
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
