--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -6,39 +6,51 @@
 
 {% block content %}
 
-    <p>
-        <a href="{{ page.get_parent.url }}">Home</a>
-        &nbsp;>&nbsp;{{ page.title }}
-    </p>
+    <div class="row d-flex justify-content-center mb-5">
 
-    <div class="row d-flex justify-content-center">
+        <div class="col-8">
 
-        <h1 class="text-center">{{ page.title }}</h1>
+            <h1 class="text-center">
+                {{ page.title }}
+            </h1>
 
-        <div class="intro text-center">{{ page.intro|richtext }}</div>
+            <h5 class="text-center mt-3 text-muted">
+                {{ page.intro|richtext }}
+            </h5>
 
-        {% for post in blogpages %}
-            {% with post=post.specific %}
+            <div class="pt-4">
 
-                <div class="card mt-5 py-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 px-3 py-3">
-                            {% if post.main_image %}
-                                <a href="{% pageurl post %}">{% image post.main_image fill-160x100 %}</a>
-                            {% endif %}
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                            <h5 class="card-title"><a href="{% pageurl post %}">{{ post.title }}</a></h5>
-                            <p class="card-text text-muted">{{ post.date }}</p>
-                            <p class="card-text">{{ post.intro }}</p>
+                {% for post in blogpages %}
+                    {% with post=post.specific %}
+
+                        <div class="row mb-4">
+
+                            <div class="col-3 pl-5">
+                                {% if post.main_image %}
+                                    <a href="{% pageurl post %}">{% image post.main_image fill-100x100 class="blog-list-image" %}</a>
+                                {% endif %}
                             </div>
-                        </div>
-                    </div>
-                </div>
 
-            {% endwith %}
-        {% endfor %}
+                            <div class="col">
+
+                                <h4><a href="{% pageurl post %}">{{ post.title }}</a></h4>
+
+                                <div class="text-muted">{{ post.date }}</div>
+
+                                {% with body=post.body|richtext %}
+                                    {{ body|truncatechars:95 }}
+                                {% endwith %}
+
+                            </div>
+
+                        </div>
+
+                    {% endwith %}
+                {% endfor %}
+
+            </div>
+
+        </div>
 
     </div>
 
