--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -6,36 +6,20 @@
 
 {% block content %}
 
-    <!-- Nav links -->
-
-    <p>
-        <a href="{% slugurl 'home' %}">Home</a>
-        &nbsp;>&nbsp;
-        <a href="{{ page.get_parent.url }}">Blog</a>
-        &nbsp;>&nbsp;{{ page.title }}
-    </p>
-
     <!-- Page meta  -->
 
-    <h1>{{ page.title }}</h1>
+    <h3>{{ page.title }}</h3>
 
     <p class="meta">{{ page.date }}</p>
 
     {% if page.categories.all %}
         <p>
-            Categories:
+            Posted in:
             {% for category in page.categories.all %}
-                {% image category.icon fill-24x24 style="vertical-align: middle" %}
-                {{ category.name }}
-            {% endfor %}
-        </p>
-    {% endif %}
 
-    {% if page.tags.all.count %}
-        <p>
-            Tags:
-            {% for tag in page.tags.all %}
-                <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+                    {% image category.icon fill-24x24 style="vertical-align: middle" %}
+                    {{ category.name }}
+
             {% endfor %}
         </p>
     {% endif %}
@@ -54,5 +38,19 @@
             <p>{{ item.caption}}</p>
         </div>
     {% endfor %}
+
+    <!-- Tags -->
+
+    {% if page.tags.all.count %}
+        <p>
+            Tags:
+            {% for tag in page.tags.all %}
+                <a href="{% slugurl 'tags' %}?tag={{ tag }}">
+                    <button type="button" class="btn btn-primary btn-sm">
+                        {{ tag|capfirst }}
+                    </button></a>
+            {% endfor %}
+        </p>
+    {% endif %}
 
 {% endblock %}
