--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -10,6 +10,8 @@
 
         <div class="col-8">
 
+            <!-- Page description -->
+
             <h1 class="text-center">
                 {{ page.title }}
             </h1>
@@ -18,9 +20,11 @@
                 {{ page.intro|richtext }}
             </h5>
 
+            <!-- Post listing -->
+
             <div class="pt-4">
 
-                {% for post in blogpages %}
+                {% for post in posts %}
                     {% with post=post.specific %}
 
                         <div class="row mb-4">
@@ -35,7 +39,7 @@
 
                                 <h4><a href="{% pageurl post %}">{{ post.title }}</a></h4>
 
-                                <div class="text-muted">{{ post.date }}</div>
+                                <div class="text-muted"><small>{{ post.date }}</small></div>
 
                                 {% with body=post.body|richtext %}
                                     {{ body|truncatechars:95 }}
@@ -49,6 +53,45 @@
                 {% endfor %}
 
             </div>
+
+            <!-- Pagination -->
+
+            {% if posts.has_other_pages %}
+
+                <div class="pt-2">
+
+                    <ul class="pagination justify-content-center">
+
+                        <!-- Previous page arrow -->
+                        {% if posts.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+                        {% else %}
+                            <li class="page-item disabled"><a class="page-link" href="#" >&laquo;</a></li>
+                        {% endif %}
+
+                        <!-- Page numbers -->
+                        {% for i in posts.paginator.page_range %}
+                            <!-- Active page -->
+                            {% if posts.number == i %}
+                                <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+                            <!-- Inactive pages -->
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+
+                        <!-- Next page arrow -->
+                        {% if posts.has_next %}
+                            <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+                        {% else %}
+                            <li class="page-item disabled"><a class="page-link" href="#" >&raquo;</a></li>
+                        {% endif %}
+
+                    </ul>
+
+                </div>
+
+            {% endif %}
 
         </div>
 
