--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -6,51 +6,72 @@
 
 {% block content %}
 
-    <!-- Page meta  -->
+    <div class="row d-flex justify-content-center pb-5">
+        <div class="col-10">
 
-    <h3>{{ page.title }}</h3>
+            <!-- Page meta  -->
 
-    <p class="meta">{{ page.date }}</p>
+            <div class="div text-center pb-3">
 
-    {% if page.categories.all %}
-        <p>
-            Posted in:
-            {% for category in page.categories.all %}
+                <h3 class="pb-3">{{ page.title }}</h3>
 
-                    {% image category.icon fill-24x24 style="vertical-align: middle" %}
-                    {{ category.name }}
+                <p class="text-muted">{{ page.date }}</p>
 
-            {% endfor %}
-        </p>
-    {% endif %}
+                <!-- Categories -->
 
-    <!-- Page text  -->
+                {% if page.categories.all %}
+                    <p class="text-muted pb-1">
+                        Posted in:
+                        {% for category in page.categories.all %}
+                            {% image category.icon fill-20x20 style="vertical-align: middle" %}
+                            {{ category.name }}
+                            &nbsp;
+                        {% endfor %}
+                    </p>
+                {% endif %}
 
-    <div class="intro">{{ page.intro }}</div>
+                <!-- Tags -->
 
-    {{ page.body|richtext }}
+                {% if page.tags.all.count %}
+                    <p class="text-muted">
+                        Tags:
+                        {% for tag in page.tags.all %}
+                            <a href="{% slugurl 'tags' %}?tag={{ tag }}">
+                                <button type="button" class="btn btn-outline-primary btn-sm">
+                                    {{ tag|capfirst }}
+                                </button></a>
+                        {% endfor %}
+                    </p>
+                {% endif %}
 
-    <!-- Page images -->
+            </div>
 
-    {% for item in page.gallery_images.all %}
-        <div style="float: left; margin: 10px;">
-            {% image item.image fill-320x240 %}
-            <p>{{ item.caption}}</p>
+            <!-- Page text  -->
+
+            <div class="lh-lg pb-3 text-justify">
+                {{ page.body|richtext }}
+            </div>
+
+            <!-- Page images -->
+
+            <div class="row pb-3">
+                <div class="col">
+                    <div class="blog-page-image-block">
+
+                    {% for item in page.gallery_images.all %}
+
+                        {% image item.image width-400 class="blog-page-image border" %}
+
+                        <p class="text-center text-muted p-2">{{ item.caption}}</p>
+
+                    {% endfor %}
+
+                    </div>
+
+                </div>
+            </div>
+
         </div>
-    {% endfor %}
-
-    <!-- Tags -->
-
-    {% if page.tags.all.count %}
-        <p>
-            Tags:
-            {% for tag in page.tags.all %}
-                <a href="{% slugurl 'tags' %}?tag={{ tag }}">
-                    <button type="button" class="btn btn-primary btn-sm">
-                        {{ tag|capfirst }}
-                    </button></a>
-            {% endfor %}
-        </p>
-    {% endif %}
+    </div>
 
 {% endblock %}
