--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -31,7 +31,7 @@
 
                             <div class="col-3 pl-5">
                                 {% if post.main_image %}
-                                    <a href="{% pageurl post %}">{% image post.main_image fill-100x100 class="blog-list-image" %}</a>
+                                    <a href="{% pageurl post %}">{% image post.main_image fill-100x100 class="blog-list-image border" %}</a>
                                 {% endif %}
                             </div>
 
