--- a/mysite/static/css/mysite.css
+++ b/mysite/static/css/mysite.css
@@ -50,3 +50,7 @@ a:link {
     line-height: 60px;  /* Vertically center the text there */
     text-align: center;
 }
+
+.social-links {
+    vertical-align: middle;
+}
