--- a/blog/templates/blog/blog_tag_index_page.html
+++ b/blog/templates/blog/blog_tag_index_page.html
@@ -30,7 +30,7 @@
 
                     <div class="text-muted"><small>{{ post.date }}</small></div>
 
-                    {% with body=post.body|richtext %}
+                    {% with body=post.body %}
                         {{ body|truncatechars:95 }}
                     {% endwith %}
 
