--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -10,92 +10,112 @@
 
         <div class="col-10">
 
-            <!-- Page description -->
+            <!-- Page description block -->
 
-            <h1 class="text-center">
-                {{ page.title }}
-            </h1>
-
-            <h5 class="text-center mt-3 text-muted">
-                {{ page.intro|richtext }}
-            </h5>
-
-            <!-- Post listing -->
-
-            <div class="pt-4">
-
-                {% for post in posts %}
-                    {% with post=post.specific %}
-
-                        <div class="row mb-4">
-
-                            <!-- Post image -->
-                            <div class="col-4 pl-5">
-                                {% if post.first_image %}
-                                    <a href="{% pageurl post %}">
-                                        {% image post.first_image fill-100x100 class="blog-list-image border" %}
-                                    </a>
-                                {% endif %}
-                            </div>
-
-                            <!-- Post title and date -->
-                            <div class="col pt-3">
-                                <div class="py-1">
-                                    <h4 class="pb-1">
-                                        <a href="{% pageurl post %}">{{ post.title }}</a>
-                                    </h4>
-                                </div>
-                                <div class="text-muted">{{ post.date }}</div>
-                            </div>
-
-                        </div>
-
-                    {% endwith %}
-                {% endfor %}
-
+            <div class="row mb-4">
+                <div class="col">
+                    <h1 class="text-center">
+                        {{ page.title }}
+                    </h1>
+                    <h5 class="text-center mt-3 text-muted">
+                        {{ page.intro|richtext }}
+                    </h5>
+                </div>
             </div>
 
-            <!-- Pagination -->
+            <!-- Post and tag listing block -->
 
-            {% if posts.has_other_pages %}
+            <div class="row mb-4">
 
-                <div class="pt-2">
+                <!-- Post listing -->
+                <div class="col-10">
 
-                    <ul class="pagination justify-content-center">
+                        {% for post in posts %}
+                            {% with post=post.specific %}
 
-                        <!-- Previous page arrow -->
-                        {% if posts.has_previous %}
-                            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
-                        {% else %}
-                            <li class="page-item disabled"><a class="page-link" href="#" >&laquo;</a></li>
-                        {% endif %}
+                                <div class="row my-4">
 
-                        <!-- Page numbers -->
-                        {% for i in posts.paginator.page_range %}
-                            <!-- Active page -->
-                            {% if posts.number == i %}
-                                <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
-                            <!-- Inactive pages -->
-                            {% else %}
-                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                            {% endif %}
+                                    <!-- Post image -->
+                                    <div class="col-3">
+                                        {% if post.first_image %}
+                                            <a href="{% pageurl post %}">
+                                                {% image post.first_image fill-100x100 class="blog-list-image border" %}
+                                            </a>
+                                        {% endif %}
+                                    </div>
+
+                                    <!-- Post title and date -->
+                                    <div class="col align-self-center">
+                                        <h4>
+                                            <a href="{% pageurl post %}">{{ post.title }}</a>
+                                        </h4>
+                                        <div class="text-muted pt-1">{{ post.date }}</div>
+                                    </div>
+
+                                </div>
+
+                            {% endwith %}
                         {% endfor %}
-
-                        <!-- Next page arrow -->
-                        {% if posts.has_next %}
-                            <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a></li>
-                        {% else %}
-                            <li class="page-item disabled"><a class="page-link" href="#" >&raquo;</a></li>
-                        {% endif %}
-
-                    </ul>
 
                 </div>
 
-            {% endif %}
+                <!-- Tag listing -->
+                <div class="col-2 text-center pt-4">
+                    <h5 class="text-muted">Tags</h5>
+                    {% for tag in tags %}
+                        <a href="{% slugurl 'tags' %}?tag={{ tag }}">
+                            <span class="badge rounded-pill mt-2 bg-primary">{{ tag|capfirst }}</span>
+                        </a>
+                    {% endfor %}
+                </div>
 
-        </div>
+            </div>
 
-    </div>
+            <!-- Pagination block -->
+            <div class="row mb-4">
+                <div class="col">
+
+                    {% if posts.has_other_pages %}
+
+                        <div class="pt-2">
+
+                            <ul class="pagination justify-content-center">
+
+                                <!-- Previous page arrow -->
+                                {% if posts.has_previous %}
+                                    <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+                                {% else %}
+                                    <li class="page-item disabled"><a class="page-link" href="#" >&laquo;</a></li>
+                                {% endif %}
+
+                                <!-- Page numbers -->
+                                {% for i in posts.paginator.page_range %}
+                                    <!-- Active page -->
+                                    {% if posts.number == i %}
+                                        <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+                                    <!-- Inactive pages -->
+                                    {% else %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
+
+                                <!-- Next page arrow -->
+                                {% if posts.has_next %}
+                                    <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+                                {% else %}
+                                    <li class="page-item disabled"><a class="page-link" href="#" >&raquo;</a></li>
+                                {% endif %}
+
+                            </ul>
+
+                        </div>
+
+                    {% endif %}
+
+                </div> <!-- Pagination col end -->
+            </div> <!-- Pagination row end -->
+
+        </div> <!-- Main col end -->
+    </div> <!-- Main row end -->
 
 {% endblock %}
