--- a/blog/templates/blog/blog_tag_index_page.html
+++ b/blog/templates/blog/blog_tag_index_page.html
@@ -26,9 +26,9 @@
 
                             <!-- Post image -->
                             <div class="col-3">
-                                {% if post.first_image %}
+                                {% if post.get_first_image %}
                                     <a href="{% pageurl post %}">
-                                        {% image post.first_image fill-100x100 class="blog-list-image border" %}
+                                        {% image post.get_first_image fill-100x100 class="blog-list-image border" %}
                                     </a>
                                 {% endif %}
                             </div>
