--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <div class="row d-flex justify-content-center pb-5">
-        <div class="col-10">
+        <div class="col">
 
             <!-- Page meta  -->
 
