--- a/mysite/static/css/mysite.css
+++ b/mysite/static/css/mysite.css
@@ -26,10 +26,10 @@ a:link {
 }
 
 .blog-list-image {
-    /* display: block; */
     border-radius: 10%;
-    /* margin: auto; */
-    margin-left: 40px;
+    display: block;
+    margin: auto;
+    /* margin-left: 40px; */
 }
 
 .blog-page-image-block {
