--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -39,7 +39,7 @@
         <!-- Main body -->
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-sm-8 my-5">
+                <div class="col-lg-6 my-5">
 
                     <!-- Content -->
                     {% block content %}
